--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
+    "prettier-plugin-tailwind": "^2.2.12"
   }
 }
